--- a/src/options.html
+++ b/src/options.html
@@ -5,8 +5,8 @@
 // Saves options to localStorage.
 function save_options() {
 
-  var values = document.getElementById("filterValues");
-  localStorage["filterValues"] = values.value;
+  var textarea = document.getElementById("filterValues");
+  localStorage["filterValues"] = textarea.value;
 
   // Update status to let user know options were saved.
   var status = document.getElementById("status");
@@ -36,7 +36,7 @@ function restore_options() {
 
 <p>Values in JSON: (ex. { "python" : 10, "bitcoin" : 400 })</p>
 
-<textarea id="filterValues" rows="3" size="30"></textarea>
+<textarea id="filterValues" rows="3" cols="50"></textarea>
 
 <div id="status">&nbsp;</div>
 <br>
