--- a/src/options.html
+++ b/src/options.html
@@ -2,6 +2,16 @@
 <head><title>Options for Hacker News Filter</title></head>
 <script type="text/javascript">
 
+/* Each filterValue set has:
+
+   (1) Title
+   (2) description
+   (3) filterValues - Json String of filters
+   (4) pages - Number of Pages to display
+
+*/
+
+
 // Saves options to localStorage.
 function save_options() {
 
