--- a/src/options.html
+++ b/src/options.html
@@ -16,19 +16,11 @@
 // Saves options to localStorage.
 function save_options() {
 
-  var activeFilter = document.getElementById("active_filter");
+  var activeFilter = document.getElementById("activeFilter");
+  localStorage["activeFilter"] = activeFilter.value;
 
-  var f1t = document.getElementById("filter_1_title");
-  var f1d = document.getElementById("filter_1_description");
-  var f1v = document.getElementById("filter_1_values");
-  var f1p = document.getElementById("filter_1_pages");
-
-  localStorage["filter_1_title"] = f1t.value;
-  localStorage["filter_1_description"] = f1d.value;
-  localStorage["filter_1_values"] = f1v.value;
-  localStorage["filter_1_pages"] = f1p.value;
-
-  activeFilter["active_filter"] = activeFilter.value;
+  var filterValues = document.getElementById("filterValues");
+  localStorage["filterValues"] = filterValues.value;
 
   // Update status to let user know options were saved.
   var status = document.getElementById("status");
@@ -42,65 +34,64 @@ function save_options() {
 // Restores select box state to saved value from localStorage.
 function restore_options() {
 	
-  localStorage["filter_1_title"] = f1t.value;
-  localStorage["filter_1_description"] = f1d.value;
-  localStorage["filter_1_values"] = f1v.value;
-  localStorage["filter_1_pages"] = f1p.value;	
-	
   var data = localStorage["filterValues"];
   if (!data) {
-	data = '{ "default" : 120, "rails" : 35, "python" : 10, "germany" : 5, "france" : 5, "heroku": 5, "bitcoin" : 170 }';
+	ob= {
+	    "standard": {
+	        "description": "everything except bitcoin",
+	        "pages": "1",
+	        "data": {
+	            "default": 1,
+	            "bitcoin": 250
+	        }
+	    },
+	    "weekly roundup": {
+	        "description": "make sure I did not miss anything important this week",
+	        "pages": "15",
+	        "data": {
+	            "default": 250,
+	            "heroku": 5,
+	            "python": 10,
+	            "rails": 40,
+	            "jquery": 20,
+	            "clojure": 10
+	        }
+	    },
+	    "find all": {
+	        "description": "find everything in the last month including certain keyword",
+	        "pages": "100",
+	        "data": {
+	            "default": 1000,
+	            "github": 1
+	        }
+	    }
+	};
+	data = JSON.stringify(ob);
   }
+				
+  var parsedData = JSON.parse(data);
+  var formattedData = JSON.stringify(parsedData, null, '\t');
+
   var textarea = document.getElementById("filterValues");
-  textarea.value = data;
+  textarea.value = formattedData;
 
-
-	var activeFilter = localStorage["active_filter"];
-  if (!favorite) {
-    return;
-  }
+  var activeFilter = document.getElementById("activeFilter");
+  activeFilter.value = localStorage["activeFilter"];
   
-  	var select = document.getElementById("activeFilter");
-	for (var i = 0; i < select.children.length; i++) {
-	  var child = select.children[i];
-	  var child.	
-	  if (child.value == favorite) {
-	    child.selected = "true";
-	    break;
-	  }
-	}
-  
-
 }
 
 </script>
 
 <body onload="restore_options()">
 
-	Active Filter:
-	<select id="activeFilter">
-	 <option value="1">1</option>
-	 <option value="2">2</option>
-	 <option value="3">3</option>
-	 <option value="4">4</option>
+<p>Json for filters:</p>
 
-	</select>
+<textarea id="filterValues" rows="35" cols="90"></textarea>
 
-<p>Title</p>
+<p>Title of active filter:</p>
 
-<input type="text" id="filter_1_title" size="40"/>
+<input type="text" id="activeFilter" size="30" />
 
-<p>Description</p>
-
-<textarea id="filter_1_description" rows="2" cols="50"></textarea>
-
-<p>Values in JSON: (ex. { "python" : 10, "bitcoin" : 400 })</p>
-
-<textarea id="filter_1_values" rows="3" cols="50"></textarea>
-
-<p>Number of pages to display</p>
-
-<input type="text" id="filter_1_pages"/>
 
 <div id="status">&nbsp;</div>
 <br>
