--- a/src/options.html
+++ b/src/options.html
@@ -36,7 +36,7 @@ function restore_options() {
 	
   var data = localStorage["filterValues"];
   if (!data) {
-	ob= {
+	var ob= {
 	    "standard": {
 	        "description": "everything except bitcoin",
 	        "pages": "1",
