--- a/src/localStorageListener.html
+++ b/src/localStorageListener.html
@@ -4,8 +4,9 @@
     <title>Background Page</title>
     <script>
 	chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
+		console.log('alive');
 	    if (request.method == "getLocalStorage")
-	      sendResponse({data: localStorage[request.key1]}, {data: localStorage[request.key2]});
+	      sendResponse({data1: localStorage[request.key1], data2: localStorage[request.key2]});
 	    else
 	      sendResponse({}); // snub them.
 	});
